apps/torus-governance/src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  background-image: linear-gradient(
      90deg,
      rgba(0, 0, 0, 0.8) 0%,
      rgba(0, 0, 0, 0.8) 10%,
      rgba(0, 0, 0, 0.9) 20%,
      rgba(0, 0, 0, 0.9) 100%
    ),
    url("/greek-statue.png");
  background-size: cover;
  background-position: top center;
  background-repeat: no-repeat;
  overflow: hidden; /* Prevents scrolling */
  background-attachment: fixed; /* Keeps background fixed while scrolling */
}

/* width */
::-webkit-scrollbar {
  width: 4px;
}

/* Track */
::-webkit-scrollbar-track {
  background-color: transparent;
  border-radius: 2px;
  margin: 1px 0 1px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: hsl(240 5% 64.9%);
  border-radius: 2px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: hsl(220 30% 95%);
}

@layer base {
  :root {
    --background: 240 10% 6%;
    --foreground: 0 0% 98%;
    --card: 240 10% 6%;
    --card-foreground: 0 0% 98%;
    --popover: 240 10% 6%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 240 5.9% 10%;
    --secondary: 240 3.7% 10;
    --secondary-foreground: 0 0% 98%;
    --muted: 240 3.7% 10;
    --muted-foreground: 240 5% 64.9%;
    --accent: 240 3.7% 10;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 12% 17%;
    --input: 240 3.7% 12;
    --ring: 240 4.9% 83.9%;
    --radius: 0.5rem;
    --chart-1: 225 80% 55%;
    --chart-2: 215 90% 65%;
    --chart-3: 220 85% 60%;
    --chart-4: 210 95% 75%;
    --chart-5: 215 90% 85%;
    --chart-secondary-1: 220 70% 50%;
    --chart-secondary-2: 160 60% 45%;
    --chart-secondary-3: 30 80% 55%;
    --chart-secondary-4: 280 65% 60%;
    --chart-secondary-5: 340 75% 55%;
  }
}

